--- a/index.html
+++ b/index.html
@@ -255,22 +255,22 @@
 
                 <div class="row row-cols-md-4 row-cols-sm-2 row-cols-1">
                     <div class="col mt-3">
-                        <a href="gallery/thumbnail/pict1.jpg" data-toggle="lightbox" data-caption="Luna" data-gallery="mygallery">
+                        <a href="gallery/thumbnail/pict1.jpg" data-toggle="lightbox" data-caption="Prewed" data-gallery="mygallery">
                             <img src="gallery/thumbnail/pict1.jpg" alt="Luna" class="img-fluid w-100 rounded" data-aos="fade-right" data-aos-duration="1250" data-aos-delay="150">
                         </a>
                     </div>
                     <div class="col mt-3">
-                        <a href="gallery/thumbnail/pict2.jpg" data-toggle="lightbox" data-caption="Luna" data-gallery="mygallery">
+                        <a href="gallery/thumbnail/pict2.jpg" data-toggle="lightbox" data-caption="Prewed" data-gallery="mygallery">
                             <img src="gallery/thumbnail/pict2.jpg" alt="Luna" class="img-fluid w-100 rounded" data-aos="fade-right" data-aos-duration="1250" data-aos-delay="200">
                         </a>
                     </div>
                     <div class="col mt-3">
-                        <a href="gallery/thumbnail/pict3.jpg" data-toggle="lightbox" data-caption="Luna" data-gallery="mygallery">
+                        <a href="gallery/thumbnail/pict3.jpg" data-toggle="lightbox" data-caption="Prewed" data-gallery="mygallery">
                             <img src="gallery/thumbnail/pict3.jpg" alt="Luna" class="img-fluid w-100 rounded" data-aos="fade-right" data-aos-duration="1250" data-aos-delay="250">
                         </a>
                     </div>
                     <div class="col mt-3">
-                        <a href="gallery/thumbnail/pict4.jpg" data-toggle="lightbox" data-caption="Luna" data-gallery="mygallery">
+                        <a href="gallery/thumbnail/pict4.jpg" data-toggle="lightbox" data-caption="Prewed" data-gallery="mygallery">
                             <img src="gallery/thumbnail/pict4.jpg" alt="Luna" class="img-fluid w-100 rounded" data-aos="fade-right" data-aos-duration="1250" data-aos-delay="300">
                         </a>
                     </div>
