--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                 </div>
             </div>
             <div class="row couple">
-                <div class="col-lg-6" data-aos="fade-right" data-aos-duration="1000" data-aos-delay="200">
+                <div class="col-lg-6" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="200">
                     <div class="row">
                             <div class="col-8 text-end">
                                 <h3>Ratna</h3>
@@ -90,7 +90,7 @@
 
                 <div class="col-lg-6">
                     <div class="row">
-                        <div class="col-4" data-aos="fade-left" data-aos-duration="1000" data-aos-delay="200">
+                        <div class="col-4" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="200">
                             <img src="gallery/home-img2.jpg" alt="Galih" class="img-responsive rounded-circle">
                         </div>
                             <div class="col-8">
@@ -185,7 +185,7 @@
                     <ul class="timeline">
                         <li>
                             <div class="timeline-image" style="background-image: url(gallery/img1.jpg);"></div>
-                                <div class="timeline-panel" data-aos="fade-right" data-aos-duration="1250" data-aos-delay="150">
+                                <div class="timeline-panel" data-aos="fade-up" data-aos-duration="1250" data-aos-delay="150">
                                         <div class="timeline-heading">
                                             <h3>Pertama Bertemu</h3>
                                             <span>8 September 2019</span>
@@ -198,7 +198,7 @@
                         </li>
                         <li class="timeline-inverted">
                             <div class="timeline-image" style="background-image: url(gallery/img2.jpg);"></div>
-                                    <div class="timeline-panel" data-aos="fade-left" data-aos-duration="1250" data-aos-delay="200">
+                                    <div class="timeline-panel" data-aos="fade-up" data-aos-duration="1250" data-aos-delay="200">
                                         <div class="timeline-heading">
                                             <h3>Mulai Serius</h3>
                                             <span>19 Mei 2023</span>
@@ -211,7 +211,7 @@
                         </li>
                         <li>
                             <div class="timeline-image" style="background-image: url(gallery/img3.jpg);"></div>
-                                <div class="timeline-panel" data-aos="fade-right" data-aos-duration="1250" data-aos-delay="250">
+                                <div class="timeline-panel" data-aos="fade-up" data-aos-duration="1250" data-aos-delay="250">
                                         <div class="timeline-heading">
                                             <h3>Tunangan</h3>
                                             <span>3 Januari 2024</span>
@@ -224,7 +224,7 @@
                         </li>
                         <li class="timeline-inverted">
                             <div class="timeline-image" style="background-image: url(gallery/img4.jpg);"></div>
-                                <div class="timeline-panel" data-aos="fade-left" data-aos-duration="1250" data-aos-delay="300">
+                                <div class="timeline-panel" data-aos="fade-up" data-aos-duration="1250" data-aos-delay="300">
                                         <div class="timeline-heading">
                                             <h3>Tujuan Kita</h3>
                                             <span>10 November 2024</span>
