--- a/index.html
+++ b/index.html
@@ -88,9 +88,9 @@
 
                 <span class="heart"><i class="bi bi-heart-fill"></i></span>
 
-                <div class="col-lg-6">
+                <div class="col-lg-6" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="200">
                     <div class="row">
-                        <div class="col-4" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="200">
+                        <div class="col-4">
                             <img src="gallery/home-img2.jpg" alt="Galih" class="img-responsive rounded-circle">
                         </div>
                             <div class="col-8">
