--- a/index.html
+++ b/index.html
@@ -397,6 +397,8 @@
                         <li><a href="https://www.tiktok.com/@amatirisme_" target="_blank"><i class="bi bi-tiktok"></i></a></li>
                         <li><a href="https://wa.me/6282114070091" target="_blank"><i class="bi bi-whatsapp"></i></a></li>
                     </ul>
+                    <hr>
+                    <h5 class="block">Credit <a href="https://instagram.com/sandhikagalih" target="_blank">&copy; Shandika Galih </a><a href="https://www.youtube.com/@sandhikagalihWPU" target="_blank">| Web Programming Unpas.</a></h5>
                 </div>
             </div>
         </div>
