--- a/index.html
+++ b/index.html
@@ -398,7 +398,7 @@
                         <li><a href="https://wa.me/6282114070091" target="_blank"><i class="bi bi-whatsapp"></i></a></li>
                     </ul>
                     <hr>
-                    <h5 class="block">Credit <a href="https://instagram.com/sandhikagalih" target="_blank">&copy; Sandhika Galih </a><a href="https://www.youtube.com/@sandhikagalihWPU" target="_blank">| Web Programming Unpas.</a></h5>
+                    <h5 class="block">Credit <a href="https://instagram.com/sandhikagalih" target="_blank">&copy; Sandhika Galih </a><a href="https://www.youtube.com/@sandhikagalihWPU" target="_blank">| Web Programming UNPAS.</a></h5>
                 </div>
             </div>
         </div>
